--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
+reqwest = "0.12.4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
