--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,16 @@ actix-web = "4"
 reqwest = "0.12.4"
 serde = { version = "1.0.198", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+
+
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+  "runtime-actix-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
