--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "4"
 reqwest = "0.12.4"
 serde = { version = "1.0.198", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-
+config = "0.11"
 
 [dependencies.sqlx]
 version = "0.5.7"
