--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,6 @@
 application_port : 8000
 database : 
-  host : "192.168.0.200"
+  host : "localhost"
   port : 5432
   username : "postgres"
   password : "159753"
