--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:159753@192.168.0.200:5432/newsletter"
+DATABASE_URL="postgres://postgres:159753@locahost:5432/newsletter"
