--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -27,7 +27,7 @@ jobs:
         # Environment variables scoped only for the `postgres` element
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: 159753
           POSTGRES_DB: postgres
         # When you map ports using the ports keyword, GitHub uses the --publish command to publish the container’s ports to the Docker host
         # Opens tcp port 5432 on the host and service container
@@ -39,7 +39,7 @@ jobs:
         # The uses keyword specifies that this step will run v3 of the actions/checkout action. 
         # This is an action that checks out your repository onto the runner, allowing you to run scripts or other actions against your code (such as build and test tools).
         # You should use the checkout action any time your workflow will run against the repository's code.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
        # This GitHub Action installs a Rust toolchain using rustup. It is designed for one-line concise usage and good defaults.
       - name: Install the Rust toolchain
@@ -96,7 +96,7 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: 159753
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
@@ -133,7 +133,7 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: 159753
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
