--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,12 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
-reqwest = "0.12.4"
-serde = { version = "1.0.198", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-config = "0.11"
+serde = "1.0.115"
+config = { version = "0.13", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 
-[dependencies.sqlx]
-version = "0.5.7"
-default-features = false
-features = [
-  "runtime-actix-rustls",
-  "macros",
-  "postgres",
-  "uuid",
-  "chrono",
-  "migrate"
-]
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json"] }
