--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 env_logger = "0.9"
 log = "0.4"
 tracing = { version = "0.1", features = ["log"]}
-
+tracing-bunyan-formatter = "0.3"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-log = "0.1"
+once_cell = "1"
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
