--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,7 @@ tracing-bunyan-formatter = "0.3"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-log = "0.1"
 once_cell = "1"
+secrecy = {version = "0.8", features = ["serde"]}
+tracing-actix-web = "0.5"
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
