--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:159753@127.0.0.1:5432/newsletter"
+DATABASE_URL=postgres://postgres:123456@localhost:5432/newsletter
