--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,10 @@
-application_port : 8000
+application:
+  port: 8000
+  host: 127.0.0.1 
+
 database : 
   host : "127.0.0.1"
   port : 5432
   username : "postgres"
-  password : "159753"
+  password : "123456"
   database_name : "newsletter"
